--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,17 @@
   width: 100vw;
   text-align: center;
   background-color: #282c34;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  
+}
+
+.singlePost{
+  height: 100px;
+  width: 60vw;
+  margin: 20px;
+
 }
 
 
@@ -19,6 +30,15 @@
   font-size: calc(10px + 2vmin);
   color: white;
   
+}
+.pstbx{
+  display: flex;
+  justify-content: center;
+  width: 60vw;
+  background-color: white;
+  border: gray;
+
+
 }
 
 
