--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -8,3 +8,9 @@
     width: 900px;
     background-color: white;
 }
+/* .appHeader{
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
