--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 .app {
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   width: 100vw;
   background-color: #eeeeee;
   color: white;
   display: flex;
-  justify-content: center;
-  align-items: center;
   position: fixed;
   top: 0;
-  left: 0;  
+  left: 0; 
+  overflow: auto; 
 }
 button{
   border-radius: 1px;
@@ -18,17 +18,16 @@ button{
   
 }
 .appHeader{
-  width: 100px;
-  height: 100vh;
+  overflow: auto; 
+  width: 100vw;
+  min-height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: row;
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
-  padding-top: 20px;
   color: white;
-  background-image: -webkit-linear-gradient(bottom, #ff7abe, #ff9770);
-  background-image: -o-linear-gradient(bottom, #ff7abe, #ff9770);
   background-image: linear-gradient(0deg, #ff7abe, #ff9770);
   -webkit-box-shadow: 10px 0 20px 0 rgba(0, 0, 0, 0.1), 5px 0 5px rgba(0, 0, 0, 0.2);
           box-shadow: 10px 0 20px 0 rgba(0, 0, 0, 0.1), 5px 0 5px rgba(0, 0, 0, 0.2);
