--- a/src/Components/Post/Post.css
+++ b/src/Components/Post/Post.css
@@ -1,4 +1,50 @@
 .singlePost{
+    background-color: rgb(255, 255, 255);
+    color: black;
+    width:50vw;
+    height: auto;
+    max-height: min-content;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
+    align-items: flex-start;
+    border-color: grey;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 2px;
+    flex-direction: column;
+}
+
+.title{
+    height: 20px;
+    max-width: min-content;
+    white-space: nowrap;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-top: 10px;
+    margin-left: 10px;
+    font-weight: bold;
+}
+.imageAndContentAndDelete{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width:50vw;
+}
+.imageAndContent{
+    display: flex;
+    justify-content: flex-start;
+    /* justify-content: space-between; */
+    width: 50vw;
+}
+.image{
+    margin-left: 10px;
+    margin-right: 20px;
+}
+.deletePostButton{
+    width: 55px;
+    height:50px;
+    display: flex;
+    align-items: flex-end;
 }
